<resources>
    <string name="app_name">castore-client</string>
    <string name="title_home">首页</string>
    <string name="title_category">分类</string>
    <string name="title_discover">发现</string>
    <string name="title_app_manage">管理</string>
    <string name="title_activity_main">CAstore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="som_app_icon">App Icon</string>
    <string name="application_details_tab_introduction">简介</string>
    <string name="application_details_tab_comments">评论</string>
    <string name="application_details_tab_recommands">推荐</string>
    <string name="app_user_username">用户名</string>
    <string name="app_user_password">密码</string>
    <string name="app_user_sign_in">登录</string>
    <string name="nav_header_user_name">点击头像进行登录</string>
    <string name="nav_header_user_emails">登录后享受更多的服务</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="download_histories">下载历史</string>
    <string name="user_favourits">我喜欢的</string>
    <string name="user_profile">用户资料</string>
    <string name="user_preferences">用户偏好</string>
    <string name="app_search">搜索</string>
    <string name="app_recent_search_history">最近搜索历史</string>
    <string name="app_download">下载</string>
    <string name="app_mark_grade">评分</string>
    <string name="app_search_keyword">关键字</string>
    <string name="som_app_name">App Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_loading">正在加载...</string>
    <string name="title_application_query">搜索应用</string>
    <string name="app_comment">评论</string>
    <string name="vote">赞</string>
    <string name="app_user_sign_up">注册</string>
    <string name="app_user_nickname">昵称</string>
    <string name="secret">保密</string>
    <string name="gender_boy">男</string>
    <string name="gender_girl">女</string>
    <string name="app_user_introduction">个人介绍</string>
    <string name="app_user_gender">性别</string>
    <string name="app_user_password_agin">再输一次</string>
</resources>
