<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CAStyle.PanelButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/som_app_icon"
        style="@style/CAStyle.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/som_app_icon"
        android:scaleType="center"
        android:src="@mipmap/ic_launcher"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/som_app_name"
        style="@style/CAStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/som_app_name" />

    <TextView
        android:id="@+id/som_app_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Hello" />

    <TextView
        android:id="@+id/som_app_download"
        style="@style/CAStyle.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_download" />


</LinearLayout>